--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         maven {
-            url "https://localhost:8082/artifactory/repo1-gradle-dev/"
+            url "http://localhost:8082/artifactory/repo1-gradle-dev/"
             allowInsecureProtocol = true
             credentials {
                 username = "${artifactory_user}"
@@ -10,14 +10,14 @@ buildscript {
         }
     }
     dependencies {
-        classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '4.7.2')
+        classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '4.33.22')
     }
 }
 
 allprojects {
     repositories {
         maven {
-            url "https://127.0.0.1:8081/artifactory/libs-release"
+            url "http://127.0.0.1:8081/artifactory/libs-release"
         }
     }
 }
@@ -39,7 +39,7 @@ publishing {
 }
 
 artifactory {
-    contextUrl = 'https://127.0.0.1:8081/artifactory'
+    contextUrl = 'http://127.0.0.1:8081/artifactory'
     publish {
         repository {
             repoKey = 'repo1-gradle-dev-local'
